Fixed carousel-captions on small devices.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -64,9 +64,13 @@ a:hover{
   font-size: 1.5rem;
 }
 
-/* Caption shader, to make the carousel captions more readable. */
+/* Caption shader, to make the carousel captions more readable. A smaller font-size is employed to keep is visible on smaller screens.  */
 
 .carousel-shader{
+  position: relative;
+  font-size: .8rem;
+  top: 0;
+  left: 0;
   background: linear-gradient(to top, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.5) 100%)
 }
 .carousel-shader a{
